Update 02_2_characteristics and statistcs.Rmd
edit

--- a/scripts/02_2_characteristics and statistcs.Rmd
+++ b/scripts/02_2_characteristics and statistcs.Rmd
@@ -24,9 +24,9 @@ library(table1)
 
 
 ```{r}
-expressionfinal = read.table("data/gene_expression.tsv",header = TRUE,row.names = 1)
+batch_expr = read.table("../data/batch_expr.txt",header = TRUE,row.names = 1)
 
-pheno = read.table('data/pheno.txt',header = TRUE)
+pheno = read.table('../data/pheno.txt',header = TRUE)
 ```
 
 
@@ -40,12 +40,12 @@ phenotable = pheno %>% group_by(patient) %>% filter(row_number()==1) %>% ungroup
 
 
 ```{r}
-table1(~ factor(gender) + age  | treatment_response, data=phenotable)
+table1(~ gender + age+ batch| treatment_response, data=phenotable)
 ```
 
 
 ```{r}
-table1(~ factor(gender) + age  | treatment_response*type, data=pheno,overall=F)
+table1(~ gender + age +batch | treatment_response*type, data=pheno,overall=F)
 
 ```
 
@@ -53,7 +53,8 @@ table1(~ factor(gender) + age  | treatment_response*type, data=pheno,overall=F)
 
 ```{r}
 ggplot(pheno, aes(x=type, y=age, fill=treatment_response)) + 
-  geom_boxplot()
+  geom_boxplot()+
+theme_minimal(base_size = 10)
 ```
 
 
@@ -62,17 +63,19 @@ dfgender = pheno %>% group_by(gender,treatment_response) %>% summarise(count= n(
 
 
 ggplot(dfgender, aes(treatment_response, count, fill=gender)) + 
-  geom_col(position = 'dodge')
+  geom_col(position = 'dodge')+
+    theme_minimal(base_size = 10)
 ```
 
 
 # Density plot
 ```{r}
-df <- data.frame(t(expr[7,]))
+df <- data.frame(t(batch_expr[7,]))
 
 ggplot(df, aes(x=df[,1])) +
   geom_density()+
-  xlab('probe')
+  xlab('probe')+
+theme_minimal(base_size = 10)
 ```
 
 
@@ -80,7 +83,7 @@ ggplot(df, aes(x=df[,1])) +
 
 #T1 vs W3 (R VS NR)
 ```{r}
-vegfa = expressionfinal %>%  filter(rownames(expressionfinal)=='VEGFA')
+vegfa = batch_expr %>% filter(rownames(batch_expr)=='VEGFA')
 vegfa = data.frame(t(vegfa))
 
 vegfa['res'] = pheno$treatment_response
@@ -89,20 +92,22 @@ vegfa['type'] = pheno$type
 
 vegfat = vegfa %>% filter(type !='Mucosa')
 
-
  
 ggplot(vegfat, aes(x=type, y=VEGFA)) + 
-  geom_boxplot(aes(fill = res)) 
+  geom_boxplot(aes(fill = res)) +
+    theme_minimal(base_size = 10)
+
+
 
 ```
-
 
 
 # M vs T1
 ```{r}
 vegfam = vegfa %>% filter(type !='Tumor_3 w treatment')
 ggplot(vegfam, aes(x=type, y=VEGFA, fill=res)) + 
-  geom_boxplot()
+  geom_boxplot()+
+    theme_minimal(base_size = 10)
 ```
 
 
